--- a/LAB-EXCEPTIONS-1.4.2/build.gradle
+++ b/LAB-EXCEPTIONS-1.4.2/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.jetbrains:annotations:19.0.0'
     compile group: 'com.github.javafaker', name: 'javafaker', version: '0.15'
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
